--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <h1>Welcome to the AI poem generator</h1>
-
+    <footer>
+        This Ai project was coded by 
+        <a href="https://github.com/c-schulz99" target="_blank">Charlett-Lorel Schulz</a> 
+        and is open-sourced on 
+        <a href="https://github.com/c-schulz99/shecodes-ai-add-on-week2-homework" target="_blank">GitHub</a> 
+        and hosted on 
+        <a href="https://aipoemgenerator-homework.netlify.app/" target="_blank">Netlify</a>
+    </footer>
     <script src="src/index.js"></script>
 </body>
 </html>
