added basic HTML

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>AI poem generator</title>
 </head>
 <body>
-    <h1>Welcome to the AI poem generator</h1>
+    <header>
+        <h1>AI poem generator</h1>
+    </header>
+    <main>
+        <form>
+            <input type="text" placeholder="Enter the topic of the poem..." autofocus required autocomplete="off" />
+            <input type="submit" />
+        </form>
+        <div>
+            The poem will be shown here
+        </div>
+    </main>
     <footer>
         This Ai project was coded by 
         <a href="https://github.com/c-schulz99" target="_blank">Charlett-Lorel Schulz</a> 
