--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>AI poem generator</title>
 </head>
@@ -12,13 +13,11 @@
             <h1>AI poem generator</h1>
         </header>
         <main>
-            <form>
+            <form id="poem-generator-form">
                 <input type="text" placeholder="Enter the topic of the poem..." autofocus required autocomplete="off" class="instructions" />
                 <input type="submit" class="submit-button" />
             </form>
-            <div class="poem">
-                The poem will be shown here
-            </div>
+            <div class="poem" id="poem"></div>
         </main>
         <footer>
             This Ai project was coded by 
